@@ -8,7 +8,8 @@
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>JCS</name>
-    <description>Java Central Station Interface for Marklin CS2/3</description>
+    <url>https://github.com/fransjacobs/model-railway</url>
+    <description>Java Central Station Interface for Marklin CS-2/3</description>
     <inceptionYear>2018</inceptionYear>
     <developers>
         <developer>
@@ -18,6 +19,11 @@
     </developers>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
+        <java.version>21</java.version>
+        <packaging>jar</packaging>
+        <exec.mainClass>jcs.JCS</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
@@ -172,12 +178,13 @@
                 <configuration>
                     <source>21</source>
                     <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-                <version>3.6.0</version>
+                <version>3.6.1</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
@@ -230,10 +237,75 @@
                     <argLine>-Dfile.encoding=UTF-8</argLine>
                 </configuration>
             </plugin>
-
-            
-            <!-- 
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.2</version>
+                <configuration>
+                    <skipIfEmpty>true</skipIfEmpty>
+                    <archive>
+                        <manifestEntries>
+                            <Main-Class>${exec.mainClass}</Main-Class>
+                            <Automatic-Module-Name>jcs</Automatic-Module-Name>
+                            <Program-Version>${project.version}</Program-Version>
+                            <Implementation-Version>${project.version}</Implementation-Version>
+                        </manifestEntries>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.github.fvarrui</groupId>
+                <artifactId>javapackager</artifactId>
+                <version>1.7.5</version>
+                <configuration>
+                    <mainClass>${exec.mainClass}</mainClass>
+                    <bundleJre>false</bundleJre>
+                    <customizedJre>false</customizedJre>
+                    <generateInstaller>true</generateInstaller>
+                    <administratorRequired>false</administratorRequired>
+                    <copyDependencies>true</copyDependencies>
+                    <displayName>JCS</displayName>
+                    <organizationName>Frans's Home Projects</organizationName>
+                    <vmArgs>-Xms256m -Xmx512m</vmArgs> 
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>windows</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>package</goal>
+                        </goals>
+                        <configuration>
+                            <assetsDir>/Users/fransjacobs/GitHub/model-railway/assets</assetsDir>
+                            <platform>auto</platform>
+                            <createZipball>true</createZipball>
+                            <createTarball>false</createTarball>
+                            <!--winConfig>
+                                <headerType>gui</headerType>
+                                <generateMsi>false</generateMsi>
+                            </winConfig-->
+                            <macConfig>
+                                <appId>${exec.mainClass}</appId>
+                                <icnsFile>target/classes/media/jcs.icns</icnsFile>
+                                <generateDmg>false</generateDmg>
+                                <generatePkg>false</generatePkg>
+                                <volumeName>JCS</volumeName>
+                                <entitlements>entitlements.plist</entitlements>
+                                <macStartup>SCRIPT</macStartup>
+                                <codesignApp>true</codesignApp>
+                                <hardenedCodesign>true</hardenedCodesign>
+                                <notarizeApp>false</notarizeApp>
+                            </macConfig>
+                        </configuration>
+                    </execution>
+                </executions>
+                <!--
+                                                          <additionalResources>
+                                                              <additionalResource>assets/JCS.l4j.ini</additionalResource>
+                                                          </additionalResources>   
+                -->                           
+            </plugin>         
+            <!--<plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>2.1.0</version>
@@ -270,50 +342,7 @@
                         </program>
                     </programs>
                 </configuration>
-            </plugin>
-            -->
-            <!--
-            <plugin>
-                <groupId>io.github.fvarrui</groupId>
-                <artifactId>javapackager</artifactId>
-                <version>1.4.2</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>package</goal>
-                        </goals>
-                        <configuration>
-                            <runnableJar>target/jcs-jar-with-dependencies.jar</runnableJar>
-                            <copyDependencies>false</copyDependencies>
-                            <mainClass>lan.wervel.jcs.JCSGUI</mainClass>
-                            <displayName>JCS</displayName>
-                            <organizationName>Frans's Home Projects</organizationName>
-                            <jreMinVersion>11</jreMinVersion>
-                            <bundleJre>true</bundleJre>
-                            <jrePath>/opt/jre/jdk-11.0.9.1+1-jre</jrePath>
-                            <customizedJre>false</customizedJre>
-                            <generateInstaller>false</generateInstaller>
-                            <administratorRequired>false</administratorRequired>
-                            <platform>mac</platform>
-                            <name>JCS</name>
-                            <envPath></envPath>
-                            <vmArgs>-Xms256m -Xmx512m</vmArgs> 
-                            <additionalResources>
-                                <additionalResource>assets/JCS.l4j.ini</additionalResource>
-                            </additionalResources>   
-                            <macConfig>
-                                <generateDmg>false</generateDmg>
-                                <generatePkg>false</generatePkg>
-                                <relocateJar>true</relocateJar>
-                                <developerId></developerId>
-                            </macConfig>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            -->
+            </plugin>-->
         </plugins>
     </build>
-
 </project>
